--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jotai": "^2.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.12",
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
